--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Projet3OC",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/style.scss:css/style.css"
+    "sass": "sass --watch ./sass/style.scss:css/style.css",
+    "prefix": "postcss css/style.css --use autoprefixer -d css/prefixed"
   },
   "repository": {
     "type": "git",
@@ -12,8 +13,9 @@
   },
   "author": "Lisa Roure",
   "license": "ISC",
+  "browserslist": "last 4 versions",
   "bugs": {
     "url": "https://github.com/lisaroure/ohmyfood.github.io/issues"
   },
-  "homepage": "https://github.com/lisaroure/ohmyfood.github.io#readme"
+  "homepage": "https://github.com/lisaroure/ohmyfood.github.io"
 }
